# arepa

./: .dockerignore  .gitignore  .hlint.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  arepa.cabal  hie.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: postCommand.sh
.github/workflows/: docker-image.yml  haskell.yml
app/: CLI.hs  Clang.hs  Main.hs
docker/: Dockerfile  build.sh  run.sh
lib/: graph.c  prelude.ar  stack.c
rts/: Makefile
rts/include/: debug.h  dump.h  gc.h  io.h  mem.h  prim.h  tim.h  value.h
rts/src/: dump.c  gc.c  graph.c  io.c  mem.c  prim.c  tim.c  value.c
rts/test/: test_dump.c  test_i_tim.c  test_k_tim.c  test_prim_tim.c  test_sk_tim.c  test_sksk_tim.c  test_tim.c  test_tim_prim.c
src/: CLI.hs  CodeGen.hs  Compiler.hs  Con.hs  IO.hs  IR.hs  Lit.hs  Main.hs  Parser.hs  Syntax.hs  TypeCheck.hs  Var.hs
src/Control/Monad/: Compiler.hs
src/Data/: Heap.hs  Name.hs  Stack.hs
src/IR/: GMachine.hs  Pretty.hs  Syntax.hs
src/Language/: Arepa.hs  TIM.hs
src/Language/Arepa/: Compiler.hs  Prim.hs  Syntax.hs  Types.hs
src/Language/Arepa/Compiler/: CLI.hs  Codegen.hs  Error.hs  IO.hs  Interpret.hs  LambdaLift.hs  Lint.hs  Monad.hs  Options.hs  Parse.hs  Parser.hs  Rename.hs  Translate.hs  TypeCheck.hs
src/Language/Arepa/Compiler/Codegen/: C.hs  LLVM.hs
src/Language/TIM/: Interpreter.hs  Prim.hs  Syntax.hs  Types.hs
src/Language/TIM/Interpreter/: Foreign.hs  Monad.hs  Types.hs
src/Language/TIM/Prim/: TH.hs  Types.hs
test/: Golden.hs  Good.hs  Main.hs  TIMTests.hs
test/IR/: GMachineTests.hs
test/golden/good/: do.ar  let.ar  let1.ar  let2.ar  let3.ar  prim.ar
test/unit/bad/: idents.ar
test/unit/good/: defs.ar  double_arith.ar  factorial.ar  fib_lazy_named.ar  head_inf.ar  i.ar  int_arith.ar  io2.ar  lambda2.ar  lambda3.ar  lambda5.ar  let3.ar  let4.ar  let5.ar  module.ar  seq1.ar  seq1.golden  sharing.ar  sksk.ar  string_io.ar  string_ops.ar  string_ops.golden  unit2.ar  unit2.golden  unit3.ar  unit3.golden
test/unit/good/partial/: echo.ar
test/unit/good/standalone/: case_default.ar  double_arith.golden  factorial.golden  fib_lazy.ar  fib_lazy_named.ar  fib_rec.ar  head_inf.ar  if_true.ar  io.ar  io2.ar  io2.stdin  k.ar  lambda1.ar  lambda4.ar  length.ar  list_sharing.ar  list_sharing.golden  partial.ar  seq2.ar  sharing.ar  sk.ar  sksk.ar  string_eq.ar  string_eq.golden  string_io.stdin  sum.ar  unit1.ar
