cabal-version: 3.0
name: arepa
version: 0.1.0.0
synopsis: A mini lazy functional programming language compiled using LLVM
-- description: TODO
-- homepage: TODO
bug-reports: https://github.com/agustinmista/arepa/issues
license: MIT
license-file: LICENSE
author: Agustin Mista, Alejandro Gómez Londoño
maintainer: mista@chalmers.se
category: Language
extra-source-files: CHANGELOG.md

----------------------------------------

common common-arepa
  default-language: Haskell2010
  ghc-options: -Wall -Wno-unused-do-bind
  build-depends:
      base >=4.14 && <4.15
    , mtl
    , text
    , containers
  default-extensions:
    GADTs
    DeriveFunctor
    GeneralizedNewtypeDeriving
    DerivingVia
    StandaloneDeriving
    ScopedTypeVariables
    OverloadedStrings
    ImportQualifiedPost
    FlexibleInstances
    FlexibleContexts
    MultiParamTypeClasses
    TypeApplications
    ConstraintKinds
    RecursiveDo

library arepa-lib
  import: common-arepa
  hs-source-dirs: src
  exposed-modules:
    Language.Arepa
    Language.Arepa.Compiler
    Language.Arepa.Compiler.CLI
    Language.Arepa.Compiler.Codegen
    Language.Arepa.Compiler.IO
    Language.Arepa.Compiler.Monad
    Language.Arepa.Compiler.Parser
    Language.Arepa.Compiler.TypeCheck
    Language.Arepa.Syntax
  build-depends:
      prettyprinter
    , megaparsec
    , optparse-applicative
    , llvm-hs-pure
    , llvm-hs-pretty

executable arepa
  import: common-arepa
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    arepa-lib

test-suite arepa-tests
  import: common-arepa
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    arepa-lib