cabal-version: 3.0
name: arepa
version: 0.1.0.0
synopsis: A mini lazy functional programming language compiled using LLVM
-- description: TODO
-- homepage: TODO
bug-reports: https://github.com/agustinmista/arepa/issues
license: MIT
license-file: LICENSE
author: Agustin Mista, Alejandro Gómez Londoño
maintainer: mista@chalmers.se
category: Language

extra-source-files: CHANGELOG.md

----------------------------------------

common common-arepa
  default-language: Haskell2010
  ghc-options: -Wall -Wno-unused-do-bind
  build-depends:
      base >=4.14 && <4.15
    , extra
  default-extensions:
    ConstraintKinds
    DeriveFunctor
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    ViewPatterns
  include-dirs:
    rts/include
  includes:
    rts/include/prim.h
  c-sources:
    rts/src/prim.c

library arepa-lib
  import: common-arepa
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.Compiler
    Data.Stack
    Data.Heap
    Language.Arepa
    Language.Arepa.Compiler
    Language.Arepa.Compiler.Codegen
    Language.Arepa.Compiler.Error
    Language.Arepa.Compiler.IO
    Language.Arepa.Compiler.Options
    Language.Arepa.Compiler.Parser
    Language.Arepa.Compiler.Monad
    Language.Arepa.Compiler.Translate
    Language.Arepa.Compiler.TypeCheck
    Language.Arepa.Syntax
    Language.TIM
    Language.TIM.Interpreter
    Language.TIM.Interpreter.Monad
    Language.TIM.Interpreter.Types
    Language.TIM.Prim
    Language.TIM.Syntax
  build-depends:
      mtl
    , text
    , pretty-simple
    , filepath
    , containers
    , prettyprinter
    , megaparsec
    , llvm-hs-pure
    , llvm-hs-pretty


executable arepa
  import: common-arepa
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    CLI
  build-depends:
      arepa-lib
    , optparse-applicative

test-suite arepa-tests
  import: common-arepa
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    arepa-lib