cabal-version: 3.0
name: arepa
version: 0.1.0.0
synopsis: A mini lazy functional programming language compiled using LLVM
-- description: TODO
-- homepage: TODO
bug-reports: https://github.com/agustinmista/arepa/issues
license: MIT
license-file: LICENSE
author: Agustin Mista, Alejandro Gómez Londoño
maintainer: mista@chalmers.se
category: Language

extra-source-files: CHANGELOG.md

----------------------------------------

common common-arepa
  default-language: Haskell2010
  ghc-options: -Wall -Wno-unused-do-bind
  build-depends:
      base >=4.14 && <4.15
    , extra
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    ViewPatterns
  include-dirs:
    rts/include
  includes:
    rts/include/prim.h
    rts/include/mem.h
    rts/include/io.h
    rts/include/value.h
  c-sources:
    rts/src/prim.c
    rts/src/mem.c
    rts/src/io.c
    rts/src/value.c

library arepa-lib
  import: common-arepa
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.Compiler
    Data.Heap
    Data.Name
    Data.Stack
    Language.Arepa
    Language.Arepa.Compiler
    Language.Arepa.Compiler.Codegen
    Language.Arepa.Compiler.Error
    Language.Arepa.Compiler.Interpret
    Language.Arepa.Compiler.IO
    Language.Arepa.Compiler.Options
    Language.Arepa.Compiler.LambdaLift
    Language.Arepa.Compiler.Lint
    Language.Arepa.Compiler.Parse
    Language.Arepa.Compiler.Monad
    Language.Arepa.Compiler.Rename
    Language.Arepa.Compiler.Translate
    Language.Arepa.Compiler.TypeCheck
    Language.Arepa.Prim
    Language.Arepa.Syntax
    Language.Arepa.Types
    Language.TIM
    Language.TIM.Interpreter
    Language.TIM.Interpreter.Foreign
    Language.TIM.Interpreter.Monad
    Language.TIM.Interpreter.Types
    Language.TIM.Prim
    Language.TIM.Prim.TH
    Language.TIM.Prim.Types
    Language.TIM.Syntax
    Language.TIM.Types
  build-depends:
      mtl
    , text
    , pretty-simple
    , filepath
    , containers
    , directory
    , prettyprinter
    , megaparsec
    , llvm-hs-pure
    , llvm-hs-pretty
    , template-haskell
    , process
    , zenc
    , random-strings


executable arepa
  import: common-arepa
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    CLI
  build-depends:
      arepa-lib
    , text
    , optparse-applicative
    , filepath

test-suite arepa-tests
  import: common-arepa
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Good
    TIMTests
  build-depends:
      arepa-lib
    , text
    , tasty
    , tasty-golden
    , filepath
    , process
    , directory
    , bytestring
